force-app/main/default/objects/Case/fields/Accident_Locality__c.field-meta.xml
<CustomField>
    <fullName>Accident_Locality__c</fullName>
    <description>ROMANIA</description>
    <label>Accident Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>