force-app/main/default/objects/Case/fields/Accident_Management_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Accident_Management_Sub_Status__c</fullName>
    <description>To check for sub status in accident management section.</description>
    <label>Accident Management Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting for driver’s documentation</fullName>
            </value>
            <value>
                <fullName>Awaiting for vehicle stop/parking</fullName>
            </value>
            <value>
                <fullName>Awaiting for budget submission</fullName>
            </value>
            <value>
                <fullName>Documentation in ALD Analysis</fullName>
            </value>
            <value>
                <fullName>Awaiting Regulation Inspection</fullName>
            </value>
            <value>
                <fullName>Awaiting ALD Insurer Inspection</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Insurer Inspection</fullName>
            </value>
            <value>
                <fullName>Awaiting Third Party Insurer Inspection</fullName>
            </value>
            <value>
                <fullName>Budget in ALD Analysis</fullName>
            </value>
            <value>
                <fullName>Waiting for Submission of the Supplementary Budget</fullName>
            </value>
            <value>
                <fullName>Awaiting for Parts to Arrive</fullName>
            </value>
            <value>
                <fullName>Parts in B.O at the Assembler</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer to Call Insurance Company</fullName>
            </value>
            <value>
                <fullName>Budget under negotiation with the Third Party</fullName>
            </value>
            <value>
                <fullName>Awaiting approval from ALD&apos;s insurer</fullName>
            </value>
            <value>
                <fullName>Awaiting approval from the Customer&apos;s insurer</fullName>
            </value>
            <value>
                <fullName>Awaiting for approval from the third party&apos;s insurer</fullName>
            </value>
            <value>
                <fullName>Awaiting approval from the manager</fullName>
            </value>
            <value>
                <fullName>Vehicle under repair in the ALD workshop</fullName>
            </value>
            <value>
                <fullName>Vehicle under repair in the third party&apos;s workshop</fullName>
            </value>
            <value>
                <fullName>Pending regularization of Documentation</fullName>
            </value>
            <value>
                <fullName>Awaiting Quality Inspection</fullName>
            </value>
            <value>
                <fullName>Vehicle under repair and delivered</fullName>
            </value>
            <value>
                <fullName>Suspended service</fullName>
            </value>
            <value>
                <fullName>Vehicle robbery</fullName>
            </value>
            <value>
                <fullName>Vehicle theft</fullName>
            </value>
            <value>
                <fullName>Vehicle Decreed Total Loss</fullName>
            </value>
            <value>
                <fullName>Awaiting further information</fullName>
            </value>
            <value>
                <fullName>Agreement between Individuals​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>