force-app/main/default/objects/Case/fields/Accident_Type__c.field-meta.xml
<CustomField>
    <fullName>Accident_Type__c</fullName>
    <label>Accident Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Total damage</fullName>
            </value>
            <value>
                <fullName>Class damage</fullName>
            </value>
            <value>
                <fullName>Sheet damage</fullName>
            </value>
            <value>
                <fullName>Dumber damage</fullName>
            </value>
            <value>
                <fullName>Sheet scratch</fullName>
            </value>
            <value>
                <fullName>Dumber scratch</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fortuit</fullName>
            </value>
            <value>
                <fullName>Constat amiable</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>Bris de glasse</fullName>
            </value>
            <value>
                <fullName>Vol poste radio</fullName>
            </value>
            <value>
                <fullName>Vol vehicule</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>