force-app/main/default/objects/Case/fields/Account_Customer_class__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_class__c</fullName>
    <formula>Text(Account.Customer_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer class</label>
    <type>Text</type>
</CustomField>