force-app/main/default/objects/Case/fields/Account_Environement__c.field-meta.xml
<CustomField>
    <fullName>Account_Environement__c</fullName>
    <formula>IF(OR(ISPICKVAL(Account.Subsidiary_Indicator__c,&apos;25001&apos;),ISPICKVAL(Account.Subsidiary_Indicator__c,&apos;25002&apos;),ISPICKVAL(Account.Subsidiary_Indicator__c,&apos;25003&apos;),ISPICKVAL(Account.Subsidiary_Indicator__c,&apos;38001&apos;)),TEXT(Account.Identification_Criteria__c),Account.Partner__r.Name)</formula>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>