force-app/main/default/objects/Case/fields/Account_Local_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Local_ID__c</fullName>
    <formula>Account.Local_CALDER_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Local ID</label>
    <type>Text</type>
</CustomField>