force-app/main/default/objects/Case/fields/Account_Logo__c.field-meta.xml
<CustomField>
    <fullName>Account_Logo__c</fullName>
    <formula>Account.Account_Logo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Logo</label>
    <type>Text</type>
</CustomField>