force-app/main/default/objects/Case/fields/Account_Logo_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Account_Logo_Displayed__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.ImageServer?id=&quot;+ Account.Account_Logo__c+ &quot;&amp;oid=&quot;+$Organization.Id, TEXT(Account.Identification_Criteria__c)+&quot;.png&quot;,55,180)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-</label>
    <type>Text</type>
</CustomField>