force-app/main/default/objects/Case/fields/Account_Parent_Local_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_Local_Code__c</fullName>
    <formula>Account.Parent_Local_Code__c</formula>
    <label>Account Parent Local Code</label>
    <type>Text</type>
</CustomField>