force-app/main/default/objects/Case/fields/Account_ParentId__c.field-meta.xml
<CustomField>
    <fullName>Account_ParentId__c</fullName>
    <formula>Account.Parent.Name</formula>
    <label>Account ParentId</label>
    <type>Text</type>
</CustomField>