force-app/main/default/objects/Case/fields/Account_Partner__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner__c</fullName>
    <description>Partner of the account linked to the case.</description>
    <formula>TEXT(Account.Partner__r.Account_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Partner</label>
    <type>Text</type>
</CustomField>