force-app/main/default/objects/Case/fields/Account_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Account_Qualification__c</fullName>
    <label>Account Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vip</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>