force-app/main/default/objects/Case/fields/Actual_Commercial_gesture_amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Commercial_gesture_amount__c</fullName>
    <label>Actual Commercial gesture amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>