force-app/main/default/objects/Case/fields/Actual_Operational_loss_amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Operational_loss_amount__c</fullName>
    <label>Actual Operational loss amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>