force-app/main/default/objects/Case/fields/Actual_Repair_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Repair_End_Date_Time__c</fullName>
    <description>Created as part of the BR-6053</description>
    <label>Actual Repair End Date/Time</label>
    <type>DateTime</type>
</CustomField>