force-app/main/default/objects/Case/fields/Actual_Return_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_date__c</fullName>
    <label>Actual Return date</label>
    <type>Date</type>
</CustomField>