force-app/main/default/objects/Case/fields/Actual_Vehicle_Buffer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Vehicle_Buffer_Amount__c</fullName>
    <label>Actual Vehicle Allocation Amount​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>