force-app/main/default/objects/Case/fields/Additional_info__c.field-meta.xml
<CustomField>
    <fullName>Additional_info__c</fullName>
    <label>Additional info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>