force-app/main/default/objects/Case/fields/Adriatic_Close_Date_Time_Objective__c.field-meta.xml
<CustomField>
    <fullName>Adriatic_Close_Date_Time_Objective__c</fullName>
    <formula>Service_Request_Date__c  +  Number_of_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East.Europe Close Date / Time Objective</label>
    <type>DateTime</type>
</CustomField>