force-app/main/default/objects/Case/fields/Adriatic_Contract__c.field-meta.xml
<CustomField>
    <fullName>Adriatic_Contract__c</fullName>
    <description>Croatia, Slovenia, Serbia and Ukraine Customer Care</description>
    <formula>Contract__r.Contract_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East.Europe Contract</label>
    <type>Text</type>
</CustomField>