force-app/main/default/objects/Case/fields/Adriatic_Vehicle_Reg_no__c.field-meta.xml
<CustomField>
    <fullName>Adriatic_Vehicle_Reg_no__c</fullName>
    <description>Croatia, Slovenia, Serbia and Ukraine Customer Care</description>
    <formula>Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East.Europe Vehicle Reg.no</label>
    <type>Text</type>
</CustomField>