force-app/main/default/objects/Case/fields/AgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>AgreementNumber__c</fullName>
    <label>Agreement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>