force-app/main/default/objects/Case/fields/ALD_NF__c.field-meta.xml
<CustomField>
    <fullName>ALD_NF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALD/NF</label>
    <type>Checkbox</type>
</CustomField>