force-app/main/default/objects/Case/fields/ALD_Sat_Id__c.field-meta.xml
<CustomField>
    <fullName>ALD_Sat_Id__c</fullName>
    <externalId>true</externalId>
    <label>ALD Sat Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>