force-app/main/default/objects/Case/fields/ALD_Sat_Integration_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ALD_Sat_Integration_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALD Sat Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>