force-app/main/default/objects/Case/fields/ALDSATOCSM__c.field-meta.xml
<CustomField>
    <fullName>ALDSATOCSM__c</fullName>
    <description>ALD SAT Mandatory Condition</description>
    <formula>IF (AND (
CONTAINS($Label.ALDSATRecordTypeIds,RecordType.DeveloperName),
NOT(ISBLANK( TEXT(External_Case_Category__c))),
NOT(ISBLANK( TEXT(External_Case_Detail__c))),
NOT(ISBLANK(Vehicle_No__c)),
NOT(ISBLANK(Vin_No_Contract__c)),
NOT(ISBLANK(Subsidiary_Indicator__c)),
NOT(ISBLANK(Mileage__c)),
NOT(ISBLANK(Subject)),
NOT(ISBLANK(Appointment_Date_Time_Option1__c)),
NOT(ISBLANK(ContactId))
)
,True,IF(AND(NOT(ISBLANK(Contact.Email)),NOT(ISBLANK(Contact.Phone)),Force_outbound_synchronization__c =true),True,False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALDSATOCSM</label>
    <type>Checkbox</type>
</CustomField>