force-app/main/default/objects/Case/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <formula>Contract__r.Alert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alert</label>
    <type>Text</type>
</CustomField>