force-app/main/default/objects/Case/fields/Appointment_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_F__c</fullName>
    <formula>DATEVALUE(Appointment_date_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Date F</label>
    <type>Date</type>
</CustomField>