force-app/main/default/objects/Case/fields/Appointment_date_time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_date_time__c</fullName>
    <label>Appointment date/time</label>
    <type>DateTime</type>
</CustomField>