force-app/main/default/objects/Case/fields/Appointment_date_time_new__c.field-meta.xml
<CustomField>
    <fullName>Appointment_date_time_new__c</fullName>
    <description>Created for Sweden Customer care implemtation</description>
    <label>Appointment date/time</label>
    <type>DateTime</type>
</CustomField>