force-app/main/default/objects/Case/fields/Appointment_Date_Time_Option1__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time_Option1__c</fullName>
    <label>Appointment Date &amp; Time (option 1)</label>
    <type>DateTime</type>
</CustomField>