force-app/main/default/objects/Case/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <formula>TIMEVALUE( Appointment_date_time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>