force-app/main/default/objects/Case/fields/Area_for_case_closure__c.field-meta.xml
<CustomField>
    <fullName>Area_for_case_closure__c</fullName>
    <description>JGV 15/12/2008 : workflow ALD Italy
24/02/2009 length 40 -&gt; 122</description>
    <inlineHelpText>Only users belonging to this area can close the case</inlineHelpText>
    <label>Area for case closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>