force-app/main/default/objects/Case/fields/Auto_reply__c.field-meta.xml
<CustomField>
    <fullName>Auto_reply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JGV 15/12/2008 : created for Italy CRM v2</description>
    <label>Auto reply</label>
    <type>Checkbox</type>
</CustomField>