force-app/main/default/objects/Case/fields/AWD_4WD__c.field-meta.xml
<CustomField>
    <fullName>AWD_4WD__c</fullName>
    <label>AWD/4WD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>