force-app/main/default/objects/Case/fields/AYV_Financial_correction_approved_amount__c.field-meta.xml
<CustomField>
    <fullName>AYV_Financial_correction_approved_amount__c</fullName>
    <formula>BLANKVALUE( Customer_Credit_amount__c , 0)  +  BLANKVALUE(Actual_Vehicle_Buffer_Amount__c, 0)  -  BLANKVALUE( Recovered_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AYV Financial correction approved amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>