force-app/main/default/objects/Case/fields/Bel_Marketing_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bel_Marketing_Line_2__c</fullName>
    <description>Belgium Customer Care - requirement from the word doc</description>
    <formula>IF( Text(Contact.Language__c)=&apos;fre&apos; &amp;&amp; TEXT(Account.Identification_Criteria__c) = &apos;300002&apos;, $Label.BEL_Sentence2_French , 
IF(Text(Contact.Language__c)=&apos;dut&apos; &amp;&amp; TEXT(Account.Identification_Criteria__c) = &apos;300002&apos;, $Label.BEL_Sentence2_Dutch , 
IF(Text(Contact.Language__c)=&apos;eng&apos;&amp;&amp; TEXT(Account.Identification_Criteria__c) = &apos;300002&apos;, $Label.BEL_Sentence2_English , &apos;&apos;) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bel-Marketing Line 2</label>
    <type>Text</type>
</CustomField>