force-app/main/default/objects/Case/fields/BEL_Reopen_Case__c.field-meta.xml
<CustomField>
    <fullName>BEL_Reopen_Case__c</fullName>
    <formula>AND( Time_Remaining_Boolean__c = TRUE,
     NOT( ISBLANK(Case_Closed_By__c) ) ,

CONTAINS(Status_Old_Value__c,&quot;Closed&quot;) ,
NOT(ISPICKVAL(Status, &apos;Closed&apos;)) )</formula>
    <label>BEL Reopen Case</label>
    <type>Checkbox</type>
</CustomField>