force-app/main/default/objects/Case/fields/Body_Paint_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Body_Paint_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Body &amp; Paint Supplier</label>
    <referenceTo>List_of_Body_and_Paint_supplier__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>