force-app/main/default/objects/Case/fields/Budget_ALD_approval__c.field-meta.xml
<CustomField>
    <fullName>Budget_ALD_approval__c</fullName>
    <label>Budget ALD approval</label>
    <type>Date</type>
</CustomField>