force-app/main/default/objects/Case/fields/Budget_Approval_date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval_date__c</fullName>
    <label>Budget Approval date</label>
    <type>Date</type>
</CustomField>