force-app/main/default/objects/Case/fields/Budget_FM_approval__c.field-meta.xml
<CustomField>
    <fullName>Budget_FM_approval__c</fullName>
    <description>The date when the FM Answers on budget.
This allows the maintenance team to know if this field is filled means that they have received the answer of the FM and that they have to check it 
Also it will help us to track the KPI&apos;s and SLA&apos;s to measure th FM answer</description>
    <label>FM Answer</label>
    <type>Date</type>
</CustomField>