force-app/main/default/objects/Case/fields/Budget_received_date__c.field-meta.xml
<CustomField>
    <fullName>Budget_received_date__c</fullName>
    <label>Budget received date</label>
    <type>Date</type>
</CustomField>