force-app/main/default/objects/Case/fields/Budget_type__c.field-meta.xml
<CustomField>
    <fullName>Budget_type__c</fullName>
    <label>Budget type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small amount</fullName>
            </value>
            <value>
                <fullName>Medium amount​</fullName>
            </value>
            <value>
                <fullName>Large amount​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>