force-app/main/default/objects/Case/fields/By_Pass_Custom_Workflow__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Custom_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Custom Workflow</label>
    <type>Checkbox</type>
</CustomField>