force-app/main/default/objects/Case/fields/Calder_Owner__c.field-meta.xml
<CustomField>
    <fullName>Calder_Owner__c</fullName>
    <formula>Account.CALDER_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calder Owner</label>
    <type>Text</type>
</CustomField>