force-app/main/default/objects/Case/fields/Call_2nd__c.field-meta.xml
<CustomField>
    <fullName>Call_2nd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Call</label>
    <type>Checkbox</type>
</CustomField>