force-app/main/default/objects/Case/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <label>To Back Office</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <label>From Back Office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>