force-app/main/default/objects/Case/fields/Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Car_Brand__c</fullName>
    <label>Car Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>HONDA</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>INFINITY</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>MERCEDES</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
            <value>
                <fullName>OPEL</fullName>
            </value>
            <value>
                <fullName>CHEVROLET</fullName>
            </value>
            <value>
                <fullName>PEUGEOT</fullName>
            </value>
            <value>
                <fullName>RENAULT</fullName>
            </value>
            <value>
                <fullName>DACIA</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>SUBARU</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>VOLVO</fullName>
            </value>
            <value>
                <fullName>VW</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (write in comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>