force-app/main/default/objects/Case/fields/Car_Make__c.field-meta.xml
<CustomField>
    <fullName>Car_Make__c</fullName>
    <formula>Contract__r.Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Make</label>
    <type>Text</type>
</CustomField>