force-app/main/default/objects/Case/fields/Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Model__c</fullName>
    <label>Car Model</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>