force-app/main/default/objects/Case/fields/Case_Age_In_Business_Hour__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_In_Business_Hour__c</fullName>
    <inlineHelpText>Updated only when the case is closed, or when the owner id is changed.</inlineHelpText>
    <label>Case Age In Business Hour</label>
    <length>40</length>
    <type>Text</type>
</CustomField>