force-app/main/default/objects/Case/fields/Case_Age_In_Business_Hour_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_In_Business_Hour_Number__c</fullName>
    <formula>if(NOT(ISBLANK(Case_Age_In_Business_Hour__c)), VALUE(TRIM(LEFT(Case_Age_In_Business_Hour__c, FIND(&quot; hrs,&quot;,Case_Age_In_Business_Hour__c)))) + VALUE(TRIM(SUBSTITUTE(LEFT(Case_Age_In_Business_Hour__c, FIND(&quot; min,&quot;,Case_Age_In_Business_Hour__c)),LEFT(Case_Age_In_Business_Hour__c, FIND(&quot; hrs,&quot;,Case_Age_In_Business_Hour__c))+&quot;hrs,&quot;,&quot; &quot;)))/60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age In Business Hour Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>