force-app/main/default/objects/Case/fields/Case_Close_Date_Time_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Date_Time_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Dummy updating CZE cases to run triggers again and set correct time remaining in Hrs
Comment: Reviewed in October 2020</description>
    <label>Case Close Date Time Update</label>
    <type>Checkbox</type>
</CustomField>