force-app/main/default/objects/Case/fields/Case_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_By__c</fullName>
    <label>Case Closed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>