force-app/main/default/objects/Case/fields/Case_Creator_Role__c.field-meta.xml
<CustomField>
    <fullName>Case_Creator_Role__c</fullName>
    <description>Updated by workflow.</description>
    <label>Case Creator Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>