force-app/main/default/objects/Case/fields/Case_Email_Expected__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Email Expected</label>
    <type>Checkbox</type>
</CustomField>