force-app/main/default/objects/Case/fields/Case_Email_Release__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Email Release</label>
    <type>Checkbox</type>
</CustomField>