force-app/main/default/objects/Case/fields/Case_Follower__c.field-meta.xml
<CustomField>
    <fullName>Case_Follower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case</relationshipName>
    <type>Lookup</type>
</CustomField>