force-app/main/default/objects/Case/fields/Case_Holding_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Holding_Category__c</fullName>
    <label>Case Holding Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>