force-app/main/default/objects/Case/fields/Case_Holding_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Holding_Detail__c</fullName>
    <label>Case Holding Detail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>