force-app/main/default/objects/Case/fields/Case_logo__c.field-meta.xml
<CustomField>
    <fullName>Case_logo__c</fullName>
    <formula>IF(Contact.VIP__c , IMAGE(&quot;/servlet/servlet.ImageServer?id=015200000031HgA&amp;oid=00DAU00000LAcr7&quot;, &quot;VIP&quot; , 16, 63) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>--</label>
    <type>Text</type>
</CustomField>