force-app/main/default/objects/Case/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>