force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <description>Created this new field as part of BR-5907 to store the Case Owners</description>
    <formula>IF( AND(   NOT(ISBLANK( Last_synchronization_date__c)), NOT(CONTAINS( $Label.Integration_User_ID , Owner:User.Id)) , Owner:User.IsActive, LEFT(Owner:User.Id, 3) = &apos;005&apos;) , Owner:User.Email ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Email</label>
    <type>Text</type>
</CustomField>