force-app/main/default/objects/Case/fields/Case_Related__c.field-meta.xml
<CustomField>
    <fullName>Case_Related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Related</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>